plugins {
    id 'java'
    id 'checkstyle'
    id 'com.github.johnrengelman.shadow' version '4.0.4'
    id 'application'
    id 'jacoco'
}

mainClassName = 'seedu.teachbook.Main'

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    mavenCentral()
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
}

checkstyle {
    toolVersion = '8.29'
}

run {
    enableAssertions = true
}

test {
    useJUnitPlatform()
    exclude 'seedu/teachbook/logic/commands/AddCommandIntegrationTest.class'
    exclude 'seedu/teachbook/logic/commands/DeleteCommandTest.class'
    exclude 'seedu/teachbook/logic/commands/EditCommandTest.class'
    exclude 'seedu/teachbook/logic/commands/FindCommandTest.class'
    exclude 'seedu/teachbook/logic/commands/ListCommandTest.class'
    exclude 'seedu/teachbook/model/ModelManagerTest.class'
    exclude 'seedu/teachbook/storage/StorageManagerTest.class'
    exclude 'seedu/teachbook/storage/JsonSerializableTeachBookTest.class'
    exclude 'seedu/teachbook/storage/JsonTeachBookStorageTest.class'
    exclude 'seedu/teachbook/logic/parser/AddCommandParserTest.class'
    exclude 'seedu/teachbook/logic/parser/TeachBookParserTest.class'
    exclude 'seedu/teachbook/logic/commands/HelpCommandTest.class'
    exclude 'seedu/teachbook/logic/commands/ExitCommandTest.class'
    exclude 'seedu/teachbook/logic/commands/ClearCommandTest.class'
    exclude 'seedu/teachbook/logic/LogicManagerTest.class'
    exclude 'seedu/teachbook/storage/JsonAdaptedStudentTest.class'
    exclude 'seedu/teachbook/model/student/StudentTest.class'
    exclude 'seedu/teachbook/logic/commands/AddCommandTest.class'

    // TODO: rewrite corresponding tests belonging to your part and remove exclude statements

    finalizedBy jacocoTestReport
}

task coverage(type: JacocoReport) {
    sourceDirectories.from files(sourceSets.main.allSource.srcDirs)
    classDirectories.from files(sourceSets.main.output)
    executionData.from files(jacocoTestReport.executionData)
    afterEvaluate {
        classDirectories.from files(classDirectories.files.collect {
            fileTree(dir: it, exclude: ['**/*.jar'])
        })
    }
    reports {
        html.enabled = true
        xml.enabled = true
    }
}

dependencies {
    String jUnitVersion = '5.4.0'
    String javaFxVersion = '11'

    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'win'
    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'mac'
    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'linux'
    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'win'
    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'mac'
    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'linux'
    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'win'
    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'mac'
    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'linux'
    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'win'
    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'mac'
    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'linux'

    implementation group: 'org.apache.poi', name: 'poi', version: '3.9'

    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.0'
    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.7.4'

    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: jUnitVersion

    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: jUnitVersion
}

shadowJar {
    archiveFileName.set("teachbook-v1.2.1.jar")
}

defaultTasks 'clean', 'test'
